添加二维码识别

--- a/subapp/sub-html/index.html
+++ b/subapp/sub-html/index.html
@@ -20,7 +20,7 @@
             <div id="open"></div>
             <div class="imgurl">
                 <img id="imgurl"
-                    src="./img/qr.png"
+                    src="/subapp/sub-html/img/qr.png"
                     alt="当前识别的二维码" />
             </div>
             <textarea class="result" id="result" cols="32" rows="6" placeholder="二维码识别结果！"></textarea>
@@ -33,10 +33,10 @@
     <!-- <script src="./js/main.js"></script> -->
 
     <!-- 由于没有webpack自动构建，线上path需要根据部署路径手动更换 -->
-    <script src="/subapp/sub-html/js/qrcode.js"></script>
-    <script src="/subapp/sub-html/js/jimp.js"></script>
-    <script src="/subapp/sub-html/js/jsqr.min.js"></script>
-    <script src="/subapp/sub-html/js/base.js"></script>
-    <script src="/subapp/sub-html/js/main.js"></script>
+    <script type="text/javascript" defer src="/subapp/sub-html/js/qrcode.js"></script>
+    <script type="text/javascript" defer src="/subapp/sub-html/js/jimp.js"></script>
+    <script type="text/javascript" defer src="/subapp/sub-html/js/jsqr.min.js"></script>
+    <script type="text/javascript" defer src="/subapp/sub-html/js/base.js"></script>
+    <script type="text/javascript" defer src="/subapp/sub-html/js/main.js"></script>
   </body>
 </html>
