添加二维码识别

--- a/subapp/sub-html/index.html
+++ b/subapp/sub-html/index.html
@@ -18,6 +18,7 @@
                 <input type="file" id="file" />从相册选择
             </button>
             <div id="open"></div>
+            <p id="phoneScan">手机扫描二维码预览效果</p>
             <div class="imgurl">
                 <img id="imgurl"
                     src="/subapp/sub-html/img/qr.png"
